Bug 504304 - KRunner doesn't appear when typing on the desktop using numpad keys
Summary: KRunner doesn't appear when typing on the desktop using numpad keys
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.3.5
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2025-05-16 02:47 UTC by Fernando Marcelino Muniz
Modified: 2026-05-15 16:08 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.6
Sentry Crash Report:


Attachments
Video of the issue. (3.38 MB, video/mp4)
2025-05-16 14:17 UTC, Fernando Marcelino Muniz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fernando Marcelino Muniz 2025-05-16 02:47:47 UTC
KRunner is not showing when I type on the numpad, but it shows when I type the numbers atop the letters.

The numpad numbers works only after KRunner's bar is showing.
Comment 1 Nate Graham 2025-05-16 13:53:48 UTC
> the numbers atop the letters
What does this mean?

Can you please write longer bug reports in the future, with more information, Steps To Reproduce, etc.? I assume you're trying to invoke KRunner by typing on the desktop, but I have to guess at this since it wasn't specified in the original description of the issue. :) 

A video might be helpful here, too.
Comment 2 Fernando Marcelino Muniz 2025-05-16 14:17:27 UTC
Created attachment 181385 [details]
Video of the issue.
Comment 3 Nate Graham 2025-05-16 15:00:01 UTC
Thanks.

Does anything change if you toggle num lock?
Comment 4 Fernando Marcelino Muniz 2025-05-16 15:02:47 UTC
(In reply to Nate Graham from comment #3)
> Thanks.
> 
> Does anything change if you toggle num lock?

No.
Comment 5 Nate Graham 2025-05-16 15:08:04 UTC
Ok, thanks. I don't have any keyboards with numberpads, so I'm afraid I can't attempt to reproduce the issue. I'll leave this for someone else.
Comment 6 John Kizer 2025-05-16 15:12:56 UTC
I can reproduce on my Fedora KDE 42 device, Plasma 6.3.5.
Comment 7 Fernando Marcelino Muniz 2026-05-12 23:09:20 UTC
(In reply to Nate Graham from comment #5)
> Ok, thanks. I don't have any keyboards with numberpads, so I'm afraid I
> can't attempt to reproduce the issue. I'll leave this for someone else.

How about trying it on a virtual keyboard?

Still happening in 6.6.4
Comment 8 Marco Martin 2026-05-14 12:07:17 UTC
Can reproduce
Comment 9 Bug Janitor Service 2026-05-14 14:36:04 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6593
Comment 10 Marco Martin 2026-05-14 15:10:10 UTC
Git commit d07789ff0b9f7befc2a56b418c4920dcea4e2fd3 by Marco Martin.
Committed on 14/05/2026 at 14:36.
Pushed by mart into branch 'master'.

DesktopView: Allow KeypadModifier for krunner input

keypad input is seen by qt as number keys + a Qt::KeypadModifier
So since the krunner input was filtering on modifiers, it
should be explicitly allowed

M  +1    -1    shell/desktopview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/d07789ff0b9f7befc2a56b418c4920dcea4e2fd3
Comment 11 Marco Martin 2026-05-14 15:10:57 UTC
Git commit 941465ffc149206390e8e4a952467d92a33f8f34 by Marco Martin.
Committed on 14/05/2026 at 15:10.
Pushed by mart into branch 'Plasma/6.7'.

DesktopView: Allow KeypadModifier for krunner input

keypad input is seen by qt as number keys + a Qt::KeypadModifier
So since the krunner input was filtering on modifiers, it
should be explicitly allowed


(cherry picked from commit d07789ff0b9f7befc2a56b418c4920dcea4e2fd3)

d07789ff DesktopView: Allow KeypadModifier for krunner input

Co-authored-by: Marco Martin <notmart@gmail.com>

M  +1    -1    shell/desktopview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/941465ffc149206390e8e4a952467d92a33f8f34
Comment 12 Marco Martin 2026-05-14 15:11:53 UTC
Git commit 8c1f8f9fa361739b41b922c7d56d160808c2172e by Marco Martin.
Committed on 14/05/2026 at 15:11.
Pushed by mart into branch 'Plasma/6.6'.

DesktopView: Allow KeypadModifier for krunner input

keypad input is seen by qt as number keys + a Qt::KeypadModifier
So since the krunner input was filtering on modifiers, it
should be explicitly allowed


(cherry picked from commit d07789ff0b9f7befc2a56b418c4920dcea4e2fd3)

d07789ff DesktopView: Allow KeypadModifier for krunner input

Co-authored-by: Marco Martin <notmart@gmail.com>

M  +1    -1    shell/desktopview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/8c1f8f9fa361739b41b922c7d56d160808c2172e