DesktopView: Allow KeypadModifier for krunner input

keypad input is seen by qt as number keys + a Qt::KeypadModifier
So since the krunner input was filtering on modifiers, it
should be explicitly allowed

BUG:504304


(cherry picked from commit d07789ff0b9f7befc2a56b418c4920dcea4e2fd3)

d07789ff DesktopView: Allow KeypadModifier for krunner input

Co-authored-by: Marco Martin <notmart@gmail.com>